name:                adam
version:             0.1.0.0
synopsis:            ADAM - Adaptive Moment Estimation
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.ADAM
  build-depends:       ad
                      ,aeson
                      ,base >=4.6 && <5.0
                      ,binary
                      ,deepseq
                      ,pipes
                      ,reflection
                      ,transformers
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  default-language:    Haskell2010

